<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <ImageView
        android:id="@+id/cxem_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.35"
        android:paddingBottom="5dp"
        android:src="@drawable/cxemnet_logo"
        android:contentDescription="@string/img_cxemnet_logo" />
    
    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20sp"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_appName"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:textSize="24sp" />
    
    <ImageView
        android:id="@+id/photo4wd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.35"
        android:paddingBottom="15dp"
        android:src="@drawable/photo4wd"
        android:contentDescription="@string/img_photo4wd" />

    <TextView
        android:id="@+id/textView_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="15dp"
        android:text="@string/text_about" />
</RelativeLayout>