<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <ImageView
        android:id="@+id/cxem_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha="0.35"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/cxemnet_logo"
        android:contentDescription="@string/img_cxemnet_logo" />

    <Button
        android:id="@+id/button_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_touch"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_button" />
    
    <Button
        android:id="@+id/button_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btn_touch" />
    
    <Button
        android:id="@+id/button_mcu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_touch"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_mcu" />
    
    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_mcu"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_about" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20sp"
        android:text="@string/app_name_version"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photo4wd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:alpha="0.35"
        android:paddingLeft="15dp"
        android:paddingBottom="15dp"
        android:src="@drawable/photo4wd"
        android:contentDescription="@string/img_photo4wd" />

    <Button
        android:id="@+id/button_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_buttons"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_accel" />
    
</RelativeLayout>
